Changes/New Features Since 3.1M3:

CAY-1603 Improve custom ExtendedType registration API
CAY-1607 [PATCH] add pluralize method to StringUtils for use in templates
CAY-1608 Implement constructor injection support for DefaultAdhocObjectFactory
CAY-1618 Create database adapters instances with proper injection
CAY-1629 [PATCH] Can't add custom Hessian serializers to the client
CAY-1637 [PATCH] DataContextFactory is cumbersome to customize
CAY-1638 [PATCH] Can't disable validation for CayenneContext
CAY-1639 cayenne-lifecycle: don't call String representation of ObjectId a UUID
CAY-1642 [PATCH] add ability to customize connection "timeout" setting for ROP
CAY-1643 Updated Velocity templates to use static keys in setters/getters

Bug Fixes Since 3.1M3:

CAY-1477 Modeler: Better validation for erroneous horizontal inheritance mapping
CAY-1513 Deadlock in PoolManager
CAY-1623 [PATCH] PersistentObjectList.setValue does not work
CAY-1624 [PATCH] PersistentObjectHolder throws NPE is object is transient - not in an ObjectContext
CAY-1627 CayenneModeler: collection types for to-many relationships are not saved
CAY-1628 ClassCastException when using java.util.Set or java.util.Map as collection type for to-many relationship
CAY-1631 Oracle - passing blobs as stored procedure parameters
CAY-1632 CayenneModeler: flattened relationship paths are not fully displayed

----------------------------------
Release: 3.1 M3
Date: 
----------------------------------
Changes/New Features Since 3.1M2:

CAY-943 Support multiple cayenne.xml files in the project
CAY-1266 Joint prefetches with fetch limit and offset do not work on Oracle
CAY-1461 CayenneModeler: remove ScopeMVC dependency - ObjRelationshipInfoDialog
CAY-1556 Add path construction feature to make constructing paths from constants easier for queries and orderings
CAY-1525 CharType: don't trim spaces on the left
CAY-1537 Implement ObjectContext local caches as NestedQueryCache over the shared cache